.provarCaches/00D1q0000008b5bEAA/objects/xcdhcm__Company_Holiday_Year__c.object
<CustomObject>
    <description>Records public and company holidays.  Used to set up reference holiday year and as a basis for calculating employee leave</description>
    <fields>
        <fullName>xcdhcm__Carry_over_approved__c</fullName>
        <defaultValue>0</defaultValue>
        <description>count of leave year records created for that Company Leave Year with status = Approved</description>
        <inlineHelpText>Number of current Employees whose leave carry over from the previous year is approved</inlineHelpText>
        <label>Carry over approved</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Check_for_Unique__c</fullName>
        <label>Check for unique</label>
        <length>80</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>xcdhcm__Companies_Name__c</fullName>
        <label>Company</label>
        <referenceTo>xcdhcm__Company__c</referenceTo>
        <relationshipLabel>Company Leave Years</relationshipLabel>
        <relationshipName>Company_Holiday_Year</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Company_Name_Leave_Year__c</fullName>
        <formula>xcdhcm__Companies_Name__r.Name  &amp;  Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Company and leave year</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Country__c</fullName>
        <formula>TEXT(xcdhcm__Companies_Name__r.xcdhcm__Country__c)</formula>
        <label>Country</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Eligible_for_leave__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Excludes Employees who are excluded from Leave</inlineHelpText>
        <label>Eligible for leave</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Employees_assigned__c</fullName>
        <defaultValue>0</defaultValue>
        <description>count of leave year records created for that Company Leave Year</description>
        <inlineHelpText>Number of current Employees with assigned current leave years in this Company.  If an Employee has two current Job Roles they may be assigned 2 leave years</inlineHelpText>
        <label>Employees assigned</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Employees_current_roles__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Number of Employees with current Job Roles in this Company. If an Employee has two current Job Roles this will be recorded as 2 entries</inlineHelpText>
        <label>Employees current roles</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Leave_year_starting_month__c</fullName>
        <formula>TEXT( xcdhcm__Companies_Name__r.xcdhcm__Leave_year_starting_month__c )</formula>
        <label>Leave year start month</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Mass_leave_year_created__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is used in the backend to store if the leave year has been created for all Employees for a particular year. This data is used in the starter process to determine if the leave year should be created for a new starter or not.</description>
        <inlineHelpText>When checked, the Leave year is available to be assigned through the joiner process</inlineHelpText>
        <label>Available for joiners</label>
        <type>Checkbox</type>
    </fields>
    <label>Company Leave Year</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>xcdhcm__Mass_leave_year_created__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_GB</language>
    </listViews>
    <nameField>
        <label>Company leave year</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Company Leave Years</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>xcdhcm__Company_Holiday_Year_Name</fullName>
        <active>true</active>
        <description>Do not deactivate.  Company leave year must be entered as a year number</description>
        <errorConditionFormula>IF(not(ISBLANK(Name)),NOT(REGEX(Name,&quot;[0-9]{4}&quot;)),FALSE)</errorConditionFormula>
        <errorDisplayField>Name</errorDisplayField>
        <errorMessage>Please enter the year in which the leave year starts.  This should be a 4 digit number starting 20--</errorMessage>
    </validationRules>
</CustomObject>